--- a/overlay/develop/deployment-patches.yaml
+++ b/overlay/develop/deployment-patches.yaml
@@ -1,35 +1,44 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Template
 metadata:
-  name: moodle
-  annotations:
-    image.openshift.io/triggers: |-
-      [
-        {
-          "from": {
-            "kind": "ImageStreamTag",
-            "name": "moodle:latest"
-          },
-          "fieldPath": "spec.template.spec.containers[0].image"
-        }
-      ]
-spec:
-  template:
-    spec:
-      volumes:
-        - name: moodle-data
-          persistentVolumeClaim:
-            claimName: moodle-data
-        - name: moodle-configuration-volume
-          configMap:
-            name: moodle-configuration
-            defaultMode: 420   
-      containers:
-      - name: moodle
-        image: ${EXTERNAL_URL}
-        volumeMounts:
+  name: moodle-template
+parameters:
+  - name: IMAGE_NAME
+    required: true
+
+objects:
+- apiVersion: apps/v1
+  kind: Deployment
+  metadata:
+    name: moodle
+    annotations:
+      image.openshift.io/triggers: |-
+        [
+          {
+            "from": {
+              "kind": "ImageStreamTag",
+              "name": "moodle:latest"
+            },
+            "fieldPath": "spec.template.spec.containers[0].image"
+          }
+        ]
+  spec:
+    template:
+      spec:
+        volumes:
           - name: moodle-data
-            mountPath: /opt/app-root/moodledata
+            persistentVolumeClaim:
+              claimName: moodle-data
           - name: moodle-configuration-volume
-            mountPath: /opt/app-root/src/config.php
-            subPath: config.php      
+            configMap:
+              name: moodle-configuration
+              defaultMode: 420   
+        containers:
+        - name: moodle
+          image: ${IMAGE_NAME}
+          volumeMounts:
+            - name: moodle-data
+              mountPath: /opt/app-root/moodledata
+            - name: moodle-configuration-volume
+              mountPath: /opt/app-root/src/config.php
+              subPath: config.php      
