--- a/base/pvc.yaml
+++ b/base/pvc.yaml
@@ -4,7 +4,8 @@ metadata:
   name: moodle-data
   labels:
     app.kubernetes.io/instance: moodle
-    app.kubernetes.io/name: moodle  
+    app.kubernetes.io/name: moodle
+    app.kubernetes.io/part-of: moodle      
 spec:
   accessModes:
     - ReadWriteOnce
@@ -19,7 +20,8 @@ metadata:
   name: posgre
   labels:
     app.kubernetes.io/instance: moodle
-    app.kubernetes.io/name: moodle  
+    app.kubernetes.io/name: moodle
+    app.kubernetes.io/part-of: moodle      
 spec:
   accessModes:
     - ReadWriteOnce
