--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,21 +2,23 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: ${{values.component_id | dump}}
-  description: "Moodle for Red Hat Developer Hub"
+  {%- if values.description %}
+  description: ${{values.description | dump}}
+  {%- endif %}
   annotations:
     github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
     backstage.io/techdocs-ref: dir:.
     backstage.io/kubernetes-namespace: ${{values.namespace | dump}}
     backstage.io/kubernetes-id: ${{values.component_id | dump}}
     janus-idp.io/tekton : ${{values.component_id | dump}}
-    backstage.io/kubernetes-label-selector:  app=${{values.component_id | dump}}
+    backstage.io/kubernetes-label-selector: 'app=${{values.component_id | dump}}'
   links:
     - title: Documentation
-      url: https://github.com/${{values.destination.owner + "/" + values.destination.repo}}/blob/main/README.md 
-    - url: https://workspaces.openshift.com/#${{values.destination.owner + "/" + values.destination.repo}}/moodle
+      url: https://github.com/maximilianoPizarro/moodle/blob/main/README.md 
+    - url: https://workspaces.openshift.com/#https://github.com/maximilianopizarro/moodle
       title: OpenShift Dev Spaces (VS Code)
       icon: web
-    - url: https://${{values.component_id | dump}}-maximilianopizar-2-dev.apps.rm2.thpm.p1.openshiftapps.com
+    - url: https://moodle-maximilianopizar-2-dev.apps.rm2.thpm.p1.openshiftapps.com
       title: Moodle Url
       icon: web
   tags:
